Moved files around, removed test.html, fixed a bug
fixed logo overlapping text on narrower resolutions

--- a/css/style1.css
+++ b/css/style1.css
@@ -27,7 +27,7 @@ h1 {
 .titletxt {
 	position: fixed;
 	top: -16px;
-	left: 10%;
+	left: 128px;
 }
 .titleimg {
 	padding-left: 16px;
